--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/cr45mes/island#readme",
   "dependencies": {
-    "lin-ui": "^0.9.13"
+    "hy-event-store": "^1.3.1",
+    "lin-ui": "^0.9.13",
+    "underscore": "^1.13.6"
   }
 }
